test/regress/regress-22.txt
;;; TOOL: wat2wasm
;;; ERROR: 1
(module
    (type $sig (func (param i32) (result i32)))
    (table 0 anyfunc)
    (func (result i32)
      (call_indirect (type $sig) (result i32) (i32.const 0))
    )
)
(;; STDERR ;;;
out/test/regress/regress-22.txt:7:8: error: expected 1 arguments, got 0
      (call_indirect (type $sig) (result i32) (i32.const 0))
       ^^^^^^^^^^^^^
;;; STDERR ;;)
